[WIP] UserService almost done (no time )

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=subscription-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/subscription_service
+spring.datasource.username=dev
+spring.datasource.password=dev
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.liquibase.change-log=classpath:db/changelog-master.yml
+spring.liquibase.default-schema=public
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
